# memo

./: .env.example  .gitignore  Makefile  README.md
client/: Cargo.toml
client-colour/: Cargo.toml
client-colour/src/: colour.rs  error.rs  lib.rs  utils.rs
client/src/: main.rs  model.rs
client_seed/: Cargo.toml
client_yew/: Cargo.toml
client_yew/src/: lib.rs
misc/: developing.org
misc/db/: schema.psql
misc/systemd/: isg-memo-backup.service  isg-memo-backup.sh  isg-memo-backup.timer  isg-memo.service  isg-memo.sh
server/: .env.example  .gitignore  Cargo.toml  README.md
server/errors/: 400.html  404.html  500.html
server/src/: api.rs  error.rs  lib.rs  session.rs
server/src/db/: categories.rs  mod.rs  notes.rs  pg.rs  users.rs
server/src/db/sql/: archived_notes_all.sql  binned_notes_all.sql  categories_all.sql  categories_create.sql  categories_delete.sql  categories_edit.sql  categories_get.sql  notes_all.sql  notes_archive.sql  notes_bin.sql  notes_create.sql  notes_delete.sql  notes_delete_all.sql  notes_edit.sql  notes_get.sql  notes_triage.sql  notes_unbin.sql  notes_untriage.sql  triaged_notes_all.sql
server/src/handler/: archived_notes.rs  bin.rs  categories.rs  mod.rs  notes.rs  triaged.rs  triaged_notes.rs  users.rs
server/src/interop/: categories.rs  mod.rs  notes.rs  users.rs
www/: .gitignore  404.html  civil-base.css  civil.css  index.html  manifest.json  memo-base.css  memo-form.css  memo.css  rust.html  seed.html  service-worker.js  site.webmanifest  tufte.css  yew.html
www/js/: App.js  AppState.js  ColourCreator.js  JsUtils.js  Net.js  NoteUtils.js  StateProvider.js  WasmInterfaceProvider.js  index.js  svgIcons.js
www/js/components/: ArchivedNotes.js  BaseNote.js  Bin.js  Card.js  CategorySelect.js  Login.js  Note.js  Notes.js  QuickFindOrCreate.js  Settings.js  TriagedNotes.js
www/lib/preact/: hooks.js  htm.js  mod.js  preact-router.js  preact.js
www/test/: index.html  mocha.js  sample.js
