[package]
name = "client"
version = "0.0.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0"
edition = "2018"
description = ""
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web = "0"

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
