[package]
name = "client_seed"
version = "0.0.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0"
edition = "2018"
description = ""
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8.0"
wasm-bindgen = "^0.2"

serde = "1.0.117"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
indexmap = { version = "1.6.0", features = ["serde-1"] }
enclose = "1.1.8"
