[package]
name = "client_yew"
version = "0.0.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0"
edition = "2018"
description = ""
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "^0.2"

strum = "0.19"
strum_macros = "0.19"
serde = "1"
serde_derive = "1"


# js-sys = "0.3"
